--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,13 @@ h3
     font-weight: bold;
 }
 
+h4
+{
+    font-family: 'Caviar Dreams', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 h5
 {
     font-family: 'Caviar Dreams', sans-serif;
@@ -95,6 +102,19 @@ a:hover
     background-color: white; 
     color: black; 
     border: 2px solid #4CAF50;
+}
+
+.buttonSignUp
+{
+    background-color: white; 
+    color: black; 
+    border: 2px solid red;
+}
+
+.buttonSignUp:hover
+{
+    background-color: red;
+    color: white;
 }
 
 .buttonBuy:hover
